k8s/app/bff-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-service
  template:
    metadata:
      labels:
        app: bff-service
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: bff-service
          image: techsalaryscale.azurecr.io/bff_service:cb94295a28b2fa2ed01668a6618dd72b9fcc849b
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
