k8s/app/identity-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: identity-service
          image: techsalaryregistry.azurecr.io/identity_service:v5
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
