k8s/app/search-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search_service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search_service
  template:
    metadata:
      labels:
        app: search_service
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: search_service
          image: techsalaryregistry.azurecr.io/search_service:v1
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
