k8s/app/stats-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-service
  template:
    metadata:
      labels:
        app: stats-service
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: stats-service
          image: techsalaryscale.azurecr.io/stats_service:cb94295a28b2fa2ed01668a6618dd72b9fcc849b
          imagePullPolicy: Always  # always pull the latest image for this tag
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
