k8s/app/vote-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-service
  template:
    metadata:
      labels:
        app: vote-service
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: vote-service
          image: techsalaryregistry.azurecr.io/vote_service:v2
          imagePullPolicy: Always  # always pull the latest image for this tag
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
