k8s/app/search-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: app
spec:
  selector:
    app: search_service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
