k8s/app/stats-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stats-service
  namespace: app
spec:
  selector:
    app: stats-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
