k8s/app/vote-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote_service
  namespace: app
spec:
  selector:
    app: vote_service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
